[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "platform_tester"
description = "Detects which platform python is running on"
version = '0.0.1'
requires-python = ">=3.9.12"
dependencies = []

[project.scripts]
pt = "platform_tester.main:main"